# rpi-mmal-opencv-modetect-h264

./: CMakeLists.txt  README.md  opencv_modect.c
